[metadata]
name = python-ldap-faker
version = 1.1.0
author = Caltech IMSS ADS
author_email = cmalek@caltech.edu
url = https://github.com/caltechads/python-ldap-faker
description = Fake python-ldap functions, objects and methods for use in testing.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords =
    ldap
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
project_urls =
    Documentation = https://python-ldap-faker.readthedocs.io/en/latest/
    Source = https://github.com/caltechads/python-ldap-faker
    Issues = https://github.com/caltechads/python-ldap-faker/issues

[options]
zip_safe = False
platforms = any
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    python-ldap
    case-insensitive-dictionary
    ldap-filter

[bdist_wheel]
universal = 1

# ===========
# Linters
# ===========

[flake8]
max-line-length: 120
filename: *.py
exclude: *.cfg, *.js, *.json, *.bak, *.md, *.sql, *.sh, *.txt, *.yml, simple_test_db, Makefile, Dockerfile, MANIFEST.in
# E221:  multiple spaces before operator
# E241:  multiple spaces after :
# E265:  block comment should start with '# '
# E266:  too many leading '#' for block comment
# E401:  multiple imports on one line
ignore = E221,E241,E265,E266,E401,W504

[pylint.FORMAT]
max-line-length=120

[pylint.TYPECHECK]
generated-members=ldap.*

[pylint.MESSAGES CONTROL]
disable=
    missing-docstring,
    protected-access,
    unused-argument,
    invalid-name,
    too-few-public-methods,
    attribute-defined-outside-init,
    too-many-lines

[mypy]
python_executable: ~/.pyenv/shims/python

[nosetests]
with-coverage = true
cover-package = fakeldap
cover-html = true
cover-erase = true
cover-inclusive = true
nocapture=1

[mypy-ldap.*]
ignore_missing_imports = True
ignore_errors = True

[mypy-ldap_filter.*]
ignore_missing_imports = True

[mypy-sphinx_rtd_theme.*]
ignore_missing_imports = True

[mypy-setuptools.*]
ignore_missing_imports = True